Changed Legend Unit Title

--- a/angular/ang-custom-svg-stack-horiz-bar/src/app/custom-legend/custom-legend.component.html
+++ b/angular/ang-custom-svg-stack-horiz-bar/src/app/custom-legend/custom-legend.component.html
@@ -10,7 +10,7 @@
         </svg>
       </div>
       <div class="legend-unit-title">
-        {{val.name}} {{colorScheme.length}}
+        {{val.name}}
       </div>
     </div>
   </div>
